[package]
name = "qor-os"
version = "0.1.0"
authors = ["Ash <ashplasek@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
lto = false
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
async-trait="0.1.58"
async-recursion="1.0"
atomic = "0.5"
libutils = { path = "../libutils" }
riscv = "0.7.0"
spin = "0.9.0"
static_assertions = "1.1.0"